--- a/index.html
+++ b/index.html
@@ -10,47 +10,37 @@
    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile.structure-1.4.2.min.css" />
    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
    <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+   <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+   <script type="text/javascript" charset="utf-8">
+   // Wait for Cordova to load
+   //
+      document.addEventListener("deviceready", onDeviceReady, false);
+      // Global InAppBrowser reference
+      var iabRef = null;
+      function iabLoadStart(event) {
+         alert(event.type + ' - ' + event.url);
+      }
+      function iabLoadStop(event) {
+         alert(event.type + ' - ' + event.url);
+      }
+      function iabClose(event) {
+         alert(event.type);
+            iabRef.removeEventListener('loadstart', iabLoadStart);
+            iabRef.removeEventListener('loadstop', iabLoadStop);
+            iabRef.removeEventListener('exit', iabClose);
+      }
+      // Cordova is ready //
+      function onDeviceReady() {
+         alert('Device is ready!');
+         //iabRef = window.open('http://apache.org', '_blank', 'location=yes');
+         //iabRef.addEventListener('loadstart', iabLoadStart);
+         //iabRef.addEventListener('loadstop', iabLoadStop);
+         //iabRef.addEventListener('exit', iabClose);
+      }
+   </script>
 </head>
 
    <body>
-
-      <!-- Sis -->
-      <div data-role="page" id="page">
-         <div data-role="header">
-            <div class="center-wrapper">
-		         <h1>Penn college connection</h1>
-            </div>
-	      </div>
-         <div class="ui-grid-solo">
-            <div class="ui-block-a">
-               <input type="button" class="button" value="SIS">
-               <a href="#"
-            onClick="window.plugins.childBrowser.showWebPage('http://www.pct.edu/sis');"></a>
-            </div>
-         </div>
-         <div class="ui-grid-solo">
-            <div class="ui-block-a"><input type="button" value="SIS"></div>
-         </div>
-         <div class="ui-grid-solo">
-            <div class="ui-block-a"><input type="button" value="SIS"></div>
-         </div>
-         <div class="ui-grid-solo">
-            <div class="ui-block-a"><input type="button" value="SIS"></div>
-         </div>
-         <div class="ui-grid-solo">
-            <div class="ui-block-a"><input type="button" value="SIS"></div>
-         </div>
-      </div>
-
-      <div data-role="footer">
-         <h1></h1>
-      </div>
-
-   <script>
-   document.addEventListener('deviceready', function() {
-      navigator.splashscreen.hide();
-   });
-   </script>
-
+      <a href="#" onclick="window.open('http://www.wikipedia.org','_blank','location=yes')">Wikipedia (inAppBrowser)</a><br /><br />
    </body>
 </html>
