--- a/index.html
+++ b/index.html
@@ -14,11 +14,47 @@
 </head>
 
    <body>
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
-      <a href="#" onclick="window.open('http://www.wikipedia.org','_blank','location=yes')">Wikipedia (inAppBrowser)</a><br /><br />
+      <!-- Top navigation -->
+      <div class="container">
+         <div class="frame">
+            <div class="bit-1, top-bar">
+               <h1>Penn college connection</h1>
+            </div>
+         </div>
+      </div>
+      <div class="container">
+         <div class="frame">
+            <!-- SIS -->
+            <div class="bit-2, box">
+               <p><a href="#" onclick="window.open('http://www.pct.edu/sis/','_blank','location=yes')">SIS</a></p>
+            </div>
+            <!-- PLATO -->
+            <div class="bit-2, box">
+               <p><a href="#" onclick="window.open('https://learn.pct.edu/','_blank','location=yes')">PLATO</a></p>
+            </div>
+            <!-- Email -->
+            <div class="bit-2, box">
+               <p><a href="#" onclick="window.open('https://email.pct.edu','_blank','location=yes')">Email</a></p>
+            </div>
+            <!-- Academic Calendar -->
+            <div class="bit-2, box">
+               <p><a href="#" onclick="window.open('http://www.pct.edu/academicaffairs/calendar.asp','_blank','location=yes')">Academic Calendar</a></p>
+            </div>
+            <!-- Dinning Guide -->
+            <div class="bit-2, box">
+            <p><a href="#" onclick="window.open('http://www.pct.edu/dining/dining_guide/','_blank','location=yes')">Dining Guide</a></p>
+            </div>
+            <!-- Atheletics -->
+            <div class="bit-2, box">
+               <p><a href="#" onclick="window.open('http://www.pct.edu/athletics/','_blank','location=yes')">Atheletics</a></p>
+            </div>
+         </div>
+      </div>
+
+
+
+
+
+
    </body>
 </html>
