--- a/index.html
+++ b/index.html
@@ -14,47 +14,48 @@
 </head>
 
    <body>
-      <!-- Top navigation -->
+      <!-- Top Bar -->
       <div class="container">
          <div class="frame">
-            <div class="bit-1, top-bar">
-               <h1>Penn college connection</h1>
+            <div class="top-bar">
+               <h1>PCT Connection</h1>
             </div>
          </div>
       </div>
+      <!-- InApp Browser -->
       <div class="container">
          <div class="frame">
-            <!-- SIS -->
-            <div class="bit-2, box">
-               <p><a href="#" onclick="window.open('http://www.pct.edu/sis/','_blank','location=yes')">SIS</a></p>
+            <div class="bit-2">
+               <div class="box">
+                  <a href="#" onclick="window.open('http://www.pct.edu/sis/','_blank','location=yes')"><h1>SIS</h1></a>
+               </div>
             </div>
-            <!-- PLATO -->
-            <div class="bit-2, box">
-               <p><a href="#" onclick="window.open('https://learn.pct.edu/','_blank','location=yes')">PLATO</a></p>
+            <div class="bit-2">
+               <div class="box">
+                  <a href="#" onclick="window.open('https://learn.pct.edu/','_blank','location=yes')"><h1>PLATO</h1></a>
+               </div>
             </div>
-            <!-- Email -->
-            <div class="bit-2, box">
-               <p><a href="#" onclick="window.open('https://email.pct.edu','_blank','location=yes')">Email</a></p>
+            <div class="bit-2">
+               <div class="box">
+                  <a href="#" onclick="window.open('http://www.pct.edu/academicaffairs/calendar.asp','_blank','location=yes')"><h1>Calendar</h1></a>
+               </div>
             </div>
-            <!-- Academic Calendar -->
-            <div class="bit-2, box">
-               <p><a href="#" onclick="window.open('http://www.pct.edu/academicaffairs/calendar.asp','_blank','location=yes')">Academic Calendar</a></p>
+            <div class="bit-2">
+               <div class="box">
+                  <a href="#" onclick="window.open('http://www.pct.edu/dining/dining_guide/','_blank','location=yes')"><h1>Dining Guide</h1></a>
+               </div>
             </div>
-            <!-- Dinning Guide -->
-            <div class="bit-2, box">
-            <p><a href="#" onclick="window.open('http://www.pct.edu/dining/dining_guide/','_blank','location=yes')">Dining Guide</a></p>
-            </div>
-            <!-- Atheletics -->
-            <div class="bit-2, box">
-               <p><a href="#" onclick="window.open('http://www.pct.edu/athletics/','_blank','location=yes')">Atheletics</a></p>
+            <div class="bit-2">
+               <div class="box">
+                  <a href="#" onclick="window.open('http://www.pct.edu/athletics/','_blank','location=yes')"><h1>Atheletics</h1></a>
+               </div>
             </div>
          </div>
       </div>
 
+      <div class="hr"></div>
 
-
-
-
-
+      <!-- Contacts -->
+      
    </body>
 </html>
