--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <a href="#" onclick="window.open('http://www.pct.edu/dining/dining_guide/','_blank','location=yes')"><h1>Dining Guide</h1></a>
                </div>
             </div>
-            <div class="bit-2">
+            <div class="bit-1">
                <div class="box">
                   <a href="#" onclick="window.open('http://www.pct.edu/athletics/','_blank','location=yes')"><h1>Atheletics</h1></a>
                </div>
@@ -56,6 +56,14 @@
       <div class="hr"></div>
 
       <!-- Contacts -->
-      
+      <div class="container">
+         <div class="frame">
+            <div class="bit-1">
+               <div class="box">
+                  <a href="#" onclick="window.open('contact.html','_blank','location=yes')"><h1>Contacts</h1></a>
+               </div>
+            </div>
+         </div>
+      </div>
    </body>
 </html>
